# opengl_skeleton

./: CMakeLists.txt  README.md
include/: shader.h
src/: main.cpp  shader.cpp
